chore :: 회원가입 성공 예시 수정
